shady-skin Revision History
----------------------------------

2016-04-04:
- Added setup to show title and progressbar in active menuelement

2016-04-02:
- Some fixes for numMenuItems < 13 

2016-03-29:
- Added optional bright cutmarks in displayreplay

2016-03-26:
- Some more stuff for plex II
- Added setup-submenu für pluginspecific settings

2016-03-11:
- First steps with plug-plex-detail

2016-03-06:
- Fixed bug in translation of setup-parameters

2016-02-25:
- Changed warnings related to wrong settings for columns and rows

2016-02-23:
- Adjusted y-values of progressbar in displayreplay
- Added graphics for progressbars

2016-02-22:
- Fixed layer in plug-plex-root
- Fixed int- and channel-selector in tvguideng-recmenu

2016-02-21:
- Conformed plex-grids to shady_KISS
- Reimplemented support for plexplugin
- Fixed twofold left curl brackets in displaymenutimers

2016-02-17:
- Added setup for main- and setupmenulist on the left or right side

2016-02-14:
- Adapted skinpreview
- Added setup for poster and EPGpic in detailinfos

2016-02-12:
- Changed {epgname} to {name} in menurecordings

2016-02-10:
- Adapted for skindesigner-0.8.x
- Some small fixes in menurecordings

2016-02-05:
- Fixed conditions in displaymenudetailrecording
- Fixed conditions in displaymenudetailepg and tvguideng-detail

2016-02-02:
- Added EPG-images in displaymenudetailepg, displaymenudetailrecording and plug-tvguideng-detail

2016-01-26:
- Workaround for NeutrinoEPG

2016-01-24:
- Fixed areas of numrecordingsfolder and newrecordingsfolder in recordingslist

2016-01-21:
- Fixed conditions for neutrinoepg
- Added starttimes for neutrinoepg

2016-01-12:
- Added numrecordingsfolder and newrecordingsfolder in recordingslists (Patch provided by P. Maier)

2015-08-01:
- Added progressmodeonly in displayreplay

2015-08-01:
- Added discusage in menutimers and menurecordings (optional)

2015-07-15:
- Fixed layer for timeshifttotal

2015-07-11:
- Fixed time-format
- Added scrollbars for plex-plugin