@@ -47,7 +47,7 @@
 		</listelement>
 
 		<currentelement  delay="0" fadetime="0">
-			<area x="0" y="0" width="41%" height="60%" layer="3">
+			<area condition="{currentTitle}" x="0" y="0" width="41%" height="60%" layer="3">
 				<drawtext condition="isset{presenteventtitle}" name="now" x="0" y="0" width="100%" align="center" font="{light}" fontsize="10%" color="{clrLightGray}" text="{presenteventtitle}" />
 				<drawtext condition="isset{presenteventtitle}" name="start" x="{areawidth}/4 - {width(start)}-10" y="{height(now)}" font="{light}" fontsize="8%" color="{clrLightGray}" text="{presenteventstart}" />
 				<drawtext condition="isset{presenteventtitle}" name="stop" x="{areawidth}*3/4+10" y="{height(now)}" font="{light}" fontsize="8%" color="{clrLightGray}" text="{presenteventstop}" />
@@ -55,6 +55,11 @@
 				<drawimage condition="isset{presenteventtitle}" x="{areawidth}/4+10" y="{height(now)} + {height(start)}/2-6" width="{areawidth}/2 * {presenteventelapsed} / {presenteventduration} - 20 * {presenteventelapsed} / {presenteventduration}" height="8" imagetype="skinpart" path="timeBar" />
 				<drawtextbox condition="isset{presenteventtitle}" name="nowshort" x="2%" y="{posy(start)} + {height(start)} + 10" align="center" width="94%" font="{light}" fontsize="8%" color="{clrLightGray}" text="{presenteventshorttext}" />   
 				<drawtextbox condition="isset{presenteventtitle}" name="nowdesc" x="2%" y="{posy(nowshort)} + {height(nowshort)}" width="94%" height="65%" font="{light}" fontsize="7%" color="{clrLightGray}" text="{presenteventdescription}" />
+			</area>
+			<area condition="not{currentTitle}" x="0" y="0" width="41%" height="60%" layer="3">
+				<drawimage condition="{hasposter}" name="poster" imagetype="image" path="{posterpath}" x="1%" y="0" width="{areawidth}*0.2" height="{areawidth}*0.2 * {posterheight} / {posterwidth}"/>
+				<drawtextbox condition="{hasposter}" x="2%" y="{posy(poster)}*0.97" width="94%" height="{areaheight} - {posy(poster)}" float="topleft" floatwidth="{width(poster)}*1.07" floatheight="{height(poster)}*1.07" font="{light}" fontsize="7%" color="{clrLightGray}" text="{presenteventdescription}" />
+				<drawtextbox condition="not{hasposter}" x="2%" y="0" width="94%" height="100%" font="{light}" fontsize="7%" color="{clrLightGray}" text="{presenteventdescription}" />
 			</area>
 		</currentelement>
 	</menuitems>
