@@ -144,8 +144,8 @@
 			</areacontainer>
 			<area condition="not{currentTitle}" x="0" y="0" width="41%" height="60%" layer="3">
 				<drawimage condition="{hasposter}" name="poster" imagetype="image" path="{posterpath}" x="1%" y="0" width="{areawidth} * 0.2" height="{areawidth}*0.2 * {posterheight} / {posterwidth}"/>
-				<drawtextbox condition="{hasposter}" x="2%" y="{posy(poster)}*0.968" width="94%" height="{areaheight} - {posy(poster)}" float="topleft" floatwidth="{width(poster)}*1.2" floatheight="{height(poster)} * 1.2" font="{light}" fontsize="7%" color="{clrLightGray}" text="{description}" />
-				<drawtextbox condition="not{hasposter}++isset{title}" x="2%" y="0" width="94%" height="{areaheight} " font="{light}" fontsize="7%" color="{clrLightGray}" text="{description}" />
+				<drawtextbox condition="{hasposter}" x="2%" y="0" width="94%" height="{areaheight}" float="topleft" floatwidth="{width(poster)}*1.2" floatheight="{height(poster)} * 1.2" font="{light}" fontsize="7%" color="{clrLightGray}" text="{description}" />
+				<drawtextbox condition="not{hasposter}" x="2%" y="0" width="94%" height="{areaheight} " font="{light}" fontsize="7%" color="{clrLightGray}" text="{description}" />
 			</area>
 		</currentelement>
 	</menuitems>
