@@ -3,6 +3,7 @@ shady-skin Revision History
 
 2016-04-04:
 - Added setup to show title and progressbar in active menuelement
+- Added setup to show title and progressbar in active menuelement in displaymenuchannels
 
 2016-04-02:
 - Some fixes for numMenuItems < 13 
